--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   
   # Connectivity
   connectivity_plus: ^6.0.5
+  
+  # Navigation
+  go_router: ^14.6.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
